# hominoid

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  install.py  package.json  tsconfig.json  webpack.common.js
add-on/: background.js  manifest.json
app/: siguranta  siguranta.json
src/: backgroundPage.ts  backgroundScript.ts  browserUtils.ts  db.rs  hashUtils.ts  imghash.rs  lib.rs  main.rs  model.ts  screenshoter.ts  signatureUtils.ts
src/app/: component.tsx  index.tsx
src/components/clear/: component.tsx  index.ts
src/components/databaseView/: component.tsx  index.ts
src/components/hashDb/: component.tsx  index.ts
src/components/hasher/: component.tsx  index.ts
src/components/hello/: component.tsx
src/components/messenger/: component.tsx  index.ts
src/components/screenshoter/: component.tsx  index.ts
src/components/screenshoter/__tests__/: test_scroller.tsx
src/components/sign/: component.tsx  index.ts
src/components/title/: component.tsx  index.ts
src/popup/: component.tsx
test/: Gmail2.html  test.py
test/Gmail_files/: CheckConnection.html
