[package]
name = "hominoid"
version = "0.1.0"
authors = ["Vincent Berg <gvb@anvilventures.com>"]
edition = "2018"

[lib]
name = "hominoid"
path = "src/lib.rs"

[[bin]]
name = "hominoid"
path = "src/main.rs"

[dependencies]
byteorder = "1.3.2"
base64 = "0.10.1"
png = "0.14.1"
rusqlite = "0.19.0"
dirs = "2.0.1"
serde_json = "1.0.40"
log = "0.4.7"
simple-logging = "2.0.2"
